# mpristester

./: .gitignore  CMakeLists.txt  ChangeLog  README  dbusinterfacetester.cpp  dbusinterfacetester.h  main.cpp  metadatamodel.cpp  metadatamodel.h  methoderror.h  mpris2playerinterfacetester.cpp  mpris2playerinterfacetester.h  mpris2rootinterfacetester.cpp  mpris2rootinterfacetester.h  mpris2service.cpp  mpris2service.h  mpris2servicewatcher.cpp  mpris2servicewatcher.h  mpris2tester.cpp  mpris2tester.h  mpristester.pro  propertyerror.h  window.cpp  window.h
dbus/: dbustypes.cpp  dbustypes.h  mprisplayer.cpp  mprisplayer.h  mprisroot.cpp  mprisroot.h  mpristracklist.cpp  mpristracklist.h  org.freedesktop.MediaPlayer.player.xml  org.freedesktop.MediaPlayer.root.xml
dbus/1.0/: generate.sh  mpristypes.cpp  mpristypes.h  org.freedesktop.MediaPlayer.root.xml  player_proxy.cpp  player_proxy.h  root_proxy.cpp  root_proxy.h  tracklist_proxy.cpp  tracklist_proxy.h
dbus/2.0/: Player_Node.xml  Root_Node.xml  TrackList_Node.xml  dbusabstractinterface.cpp  dbusabstractinterface.h  generate.sh  player_proxy.cpp  player_proxy.h  qtdbus-annotations.patch  root_proxy.cpp  root_proxy.h  tracklist_proxy.cpp  tracklist_proxy.h
mpris2/: interfacetest.cpp  interfacetest.h  mpris2.pri  playerinterfacetest.cpp  playerinterfacetest.h  playertestwidget.cpp  playertestwidget.h  rootinterfacetest.cpp  rootinterfacetest.h  roottestwidget.cpp  roottestwidget.h  testconsole.cpp  testconsole.h  tracklistinterfacetest.cpp  tracklistinterfacetest.h
ui/: playertest.ui  roottest.ui  window.ui
